<resources>
    <string name="app_name">CycleMe</string>
    <string name="logout_message_confirmation">Are you sure want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="password_must_be_filled">Password must be filled</string>
    <string name="minimum_8_characters">Minimum 8 characters</string>
    <string name="emailexample">abc@mail.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_example">********</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="recycle">Recycle</string>
    <string name="market">Market</string>
    <string name="account">Account</string>
    <string name="rewards">Rewards</string>
    <string name="hi">Hi,</string>
    <string name="let_s_reduce_waste_on_earth_by_recycling_nthanks_for_your_contribution">Let\'s reduce waste on earth by recycling.\nThanks for your contribution</string>
    <string name="share_cycleme_to_your_friends">Share CycleMe to your friends</string>
    <string name="get_started">Get Started</string>
    <string name="get_insights_about_waste_recycling">Get insights about waste recycling</string>
    <string name="popular_recycling_material">Popular Recycling Material</string>
    <string name="browse_materials_that_are_commonly_recycled">Browse materials that are commonly recycled</string>
    <string name="upload_photo_title">Use AI to make idea recommendations from your photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="take_picture">Take Picture</string>
    <string name="result">Result</string>
    <string name="result_description">based on your photos, AI analysis recommends the following ideas</string>
    <string name="category">Category: </string>
    <string name="accuracy">Accuracy: </string>
    <string name="switch_camera">Switch Camera</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="failed_to_open_camera">Failed to open camera</string>
    <string name="submit">Submit</string>
    <string name="choose_the_materials_you_want_to_recycle_into_high_value_items">Choose the materials you want to recycle into high-value items</string>
    <string name="desc_detail_recycle">Here\'s some recommendation ideas</string>
    <string name="upload_story">Upload Story</string>
    <string name="picture_uploaded_by_user">Picture uploaded by user</string>
    <string name="c_points">C-Points</string>
    <string name="_0">0</string>
    <string name="get_to_know_c_points">Get to know C-Points</string>
    <string name="what_is_c_points">What is C-Points?</string>
    <string name="what_is_c_points_description">C-Points is a virtual point accumulated automatically each time you have done scanning and upload your work. You’ll obtain 10 C-Points for every work uploaded on feed.</string>
    <string name="what_can_c_points_do">What can C-Points do?</string>
    <string name="what_can_c_points_do_description">You can redeem your C-points for rewards once it has reached some certain value on the reedem page. Remember, rewards can only be exchanged if your points are met its requirements.</string>
    <string name="reward_details">Reward Details</string>
    <string name="c_points_needed">C-Points needed</string>
    <string name="points">points</string>
    <string name="details">Details</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="change_profile">Change Profile</string>
    <string name="faq">FAQ</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="logout">Logout</string>
    <string name="app_version">App Version 1.0</string>
    <string name="save">Save</string>
    <string name="what_is_cycleme">What is CycleMe?</string>
    <string name="cycleme_description">CycleMe is a mobile application that enables users to classify waste based on pictures they capture. The app requires camera access and an active internet connection. With CycleMe, you can share your recycling journey through the Feed feature, where you can post images and videos accompanied by captions. Other than that, you can interact with other users by leaving comments on their posts. If you have recycled products to sell, our Marketplace feature has you covered. Please ensure that you follow any guidelines or restrictions provided by the app for content upload in the Feed feature and adhere to specific policies related to selling products in the Marketplace. We hope you enjoy using CycleMe!</string>
    <string name="how_to_use_description">The waste classification feature in CycleMe enables users to capture a picture of waste, and the application will then display the type of waste along with recycling recommendations. To utilize this feature, follow these steps:\n\n1. Grant Camera Access:\n\u2022 Allow your device to access the camera by adjusting the necessary permissions in the device settings.\n\n2. Capture Waste Image:\n\u2022 Tap the camera icon within the app.\n\u2022 Position the garbage in the frame using your device\'s camera. Ensure good lighting conditions when capturing waste images\n\u2022 Capture the image by pressing the shutter button.\n\n3. View Waste Classification:\n\u2022 The app will classify the waste and display the classification label. It may require some time for processing\n\u2022 Additionally, it will provide recommendations for recycled products related to the waste category.\n\n4. Explore Recycled Product Options:\n\u2022 If you are interested in creating a specific product, tap on one of the recommended recycled products.</string>
    <string name="title">Title</string>
    <string name="feedback_title">Feedback Title</string>
    <string name="feedback">Feedback</string>
    <string name="write_feedback">Write Feedback</string>
    <string name="send">Send</string>
    <string name="notification">Notification</string>
    <string name="you_don_t_have_notification_yet">You don\'t have notification yet</string>
    <string name="textiles">Textiles</string>
    <string name="plastic">Plastic</string>
    <string name="upload_feed">Upload Feed</string>
    <string name="let_s_share_your_work">Let\'s share your work</string>
    <string name="description">Description</string>
    <string name="you_can_explore_the_popular_recycling_categories">You can explore the popular recycling categories</string>
    <string name="share_the_excitement_to_your_friends">Share the excitement to your friends</string>
    <string name="share_caption2">Let’s make the world a better place\nBy Sharing CycleMe app to your friends :)</string>
    <string name="share_cycleme">Share CycleMe</string>
    <string name="share_cycleme_description">CycleMe is a mobile application that empowers users to classify waste based on pictures they capture or upload. Once a photo is uploaded, the app will identify the waste type and provide recommendations on recycled products tutorials. With CycleMe, users can share their recycling journey through the Feed feature, where they can post image accompanied by captions. By uploading an image to the Feed, users will earn points that can be redeemed for exciting rewards. We highly value user feedback as it contributes to the ongoing improvement of our application. We hope you enjoy your experience with CycleMe!\n\nYou can download CycleMe through this link: https://ipb.link/cycle-me-app</string>
    <string-array name="titles">
        <item>Why Is Recycling Important? 10 Benefits of Recycling</item>
        <item>How Does Recycling Help the Environment?</item>
        <item>Common Recycling Myths</item>
    </string-array>
</resources>